# StreamBase

./: CMakeLists.txt  README.md  StreamBase.sln
Binaries/: CMakeCache.txt
Client/: Client.cpp  Client.h  Client.vcxproj  Client.vcxproj.filters  ClientMain.cpp
Client/Debug/: Client.pch
Client/Debug/Client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Client.write.1u.tlog  link.2104.delete.1.tlog  link.29832.delete.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Client/Release/: Client.pch
Client/Release/Client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Server/: Server.cpp  Server.h  Server.vcxproj  Server.vcxproj.filters  ServerMain.cpp
Server/Debug/: Server.pch
Server/Debug/Server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Server.write.1u.tlog  link.33608.delete.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
Server/Release/: Server.pch
Server/Release/Server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Server.lastbuildstate
Utils/: Commands.h  MessageWrapper.cpp  MessageWrapper.h  Streamer.h  Utils.filters  Utils.vcxproj  Utils.vcxproj.filters
Utils/Debug/: Utils.idb  Utils.pch
Utils/Debug/Utils.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Utils.lastbuildstate
Utils/Release/: Utils.pch
Utils/Release/Utils.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
